objects/ssot__CareBarrierDeterminant__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CareBarrierId__c</fullName>
        <label>Care Barrier</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareDeterminantId__c</fullName>
        <label>Care Determinant</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Barrier Determinant Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721827337_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareBarrierDeterminant_CareDetermina_rel</label>
        <referenceTo>ssot__CareDeterminant__dlm</referenceTo>
        <relationshipLabel>CareBarrierDeterminant_CareDetermina_rel</relationshipLabel>
        <relationshipName>rel_1716721827337_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>